WIP webpack config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,7 +62,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "noEmit": true,
+    "noEmit": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -74,6 +74,7 @@
     "next.config.js",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts"
   ]
 }
