--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lingui-extract": "lingui extract",
     "lingui-compile": "lingui compile",
     "lint": "yarn eslint src/**/*.ts",
-    "lint-fix": "yarn eslint --fix src/**/*.ts"
+    "lint-fix": "yarn eslint --fix src/**/*.ts",
+    "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "@babel/preset-flow": "^7.10.4",
+    "@babel/runtime": "^7.12.5",
     "@babel/runtime-corejs2": "^7.12.0",
     "@lingui/babel-preset-react": "^2.9.2",
     "@lingui/core": "^2.9.1",
@@ -35,6 +37,7 @@
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.55",
     "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-runtime": "^6.26.0",
     "cross-env": "^7.0.2",
     "del": "^6.0.0",
@@ -54,15 +57,17 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.1",
     "@lingui/cli": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "airbnb": "^0.0.2",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -70,8 +75,14 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "prettier": "^2.1.2",
     "sha256-file": "^1.0.0",
-    "ts-node": "^9.0.0"
+    "ts-loader": "^8.0.11",
+    "ts-node": "^9.0.0",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
